k8s/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: kube-system
spec:
  ports:
  - name: phpmyadmin
    port: 8081
  clusterIP: None
  selector:
    app: phpmyadmin
