k8s/01-traefik-vpn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-http-ingress
  namespace: kube-system
  annotations:
    k8s.phpmyadmin.cn/displayName: phpmyadmin
    k8s.phpmyadmin.cn/workload: phpmyadmin
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-common-headers@kubernetescrd
spec:
  rules:
  - host: phpmyadmin.development.npool.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              name: phpmyadmin
